Removes unwanted complexities to keep initial version simple

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Railsbooster</title>
+    <title>RailsBooster</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -9,7 +9,7 @@
     <%= javascript_packs_with_chunks_tag 'application', defer: true %>
   </head>
 
-  <body>
+  <body class="antialiased bg-gray-100 font-sans">
     <%= yield %>
   </body>
 </html>
