Adds meta tag for responsiveness

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <title>RailsBooster</title>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8">
+
 
     <%= stylesheet_pack_tag 'application', media: 'all' %>
     <%= javascript_packs_with_chunks_tag 'application', defer: true %>
