Adds SMTP config for sending email in production

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>RailsBooster</title>
+    <title><%= ENV['APP_NAME'] %></title>
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
